--- a/flasky/app/templates/index.html
+++ b/flasky/app/templates/index.html
@@ -1,14 +1,8 @@
 {% extends "base.html" %}
-{% block page_content%}
+{% block page_content %}
 <div class="container">
 	<div class="page-header">
-		<h1>Hello, {% if name %} {{ name }} {% else %}Stranger{% endif %}</h1>
-		{% if not known %}
-		<p>Pleased to meet you!</p>
-		{% else %}
-		<p>Happy to see you again!</p>
-		{% endif %}
-	</div>
-	{{ wtf.quick_form(form) }}
+		<h1>Hello, {% if current_user.is_authenticated %} {{ current_user.username }} {% else %}Stranger{% endif %}</h1>
+
 </div>
 {% endblock %}
