--- a/flasky/app/templates/base.html
+++ b/flasky/app/templates/base.html
@@ -25,21 +25,31 @@
 		</button>
 		<a class="navbar-brand" href="{{ url_for('main.index')}}">Flasky</a>
 	</div>
-	<div class="navbar-collapse collapse">
-		<ul class="nav navbar-nav">
+	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<ul class="nav navbar-nav navbar">
 			<li><a href="{{ url_for('main.index') }}">Home</a></li>
 			{% if current_user.is_authenticated %}
 			<li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
 			{% endif %}
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-		{% if current_user.is_authenticated %}
-		<li><a href="{{ url_for('auth.logout') }}">Sign Out</a> </li>
-		{% else %}
-		<li><a href="{{ url_for('auth.login') }}">Sign In</a> </li>
-        <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-		{% endif %}
-		</ul>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				{% if current_user.is_authenticated %}
+				<li class="dropdown">
+				  <a href="{{ url_for('main.index') }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+					 aria-expanded="false"><img class="img-circle"
+												src="{{ current_user.gravatar(size=25) }}">  Account
+					  <b class="caret"></b></a>
+				  <ul class="dropdown-menu">
+					<li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
+					<li role="separator" class="divider"></li>
+					  <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+				  </ul>
+				</li>
+				{% else %}
+				<li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+				<li><a href="{{ url_for('auth.register') }}">Register</a></li>
+				{% endif %}
+			</ul>
 	</div>
 </div>
 {% endblock %}
