--- a/flasky/app/templates/index.html
+++ b/flasky/app/templates/index.html
@@ -1,8 +1,21 @@
 {% extends "base.html" %}
 {% block page_content %}
+{% import "_macros.html" as macros %}
 <div class="container">
 	<div class="page-header">
-		<h1>Hello, {% if current_user.is_authenticated %} {{ current_user.username }} {% else %}Stranger{% endif %}</h1>
 
 </div>
+	<div>
+		{% if current_user.can(Permission.WRITE_ARTICLES) %}
+		{{ wtf.quick_form(form) }}
+		{% endif %}
+	</div>
+	<div class="jumbotron">
+		{% include '_posts.html' %}
+		</div>
+	<div class="pagination">
+		{{ macros.pagination_widget(pagination, '.index') }}
+	</div>
+
+	</div>
 {% endblock %}
