--- a/flasky/app/templates/base.html
+++ b/flasky/app/templates/base.html
@@ -2,8 +2,15 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% block head %}
 {{ super() }}
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico')}}, type='image/x-icon">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico')}}", type='image/x-icon'>
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico')}}" type="image/x-icon">
+{% endblock %}
+{% block styles %}
+{{ super() }}
+<link href="{{ url_for('static', filename='style.css') }}" rel='stylesheet' type='text/css' media='all'>
+<link href="{{ url_for('static', filename='bootstrap.css') }}" rel='stylesheet' type='text/css' media='all'>
+<link href="{{ url_for('static', filename='swipebox.css') }}" rel='stylesheet' type='text/css' media='all'>
+
 {% endblock %}
 
 {% block scripts %}
