--- a/flasky/app/templates/user.html
+++ b/flasky/app/templates/user.html
@@ -8,12 +8,12 @@
     <div class="row">
         <div class="col-md-3">
             <a href="#">
-                    <img class="img-responsive" src="{{ current_user.gravatar(size=256) }}" alt="">
+                    <img class="img-responsive" src="{{ user.gravatar(size=256) }}" alt="">
             </a>
             </div>
         <div class="col-md-7">
             <h3>{{ user.username }}</h3>
-            <h4>Subheading</h4>
+            <h4></h4>
             <p>
                 {% if user.name %}{{ user.name }}{% endif %}
                 {% if user.location %}
