--- a/flasky/app/templates/_posts.html
+++ b/flasky/app/templates/_posts.html
@@ -1,82 +1,52 @@
 <div class="content">
-	<div class="container">
-        <ul id="myList">
-            {% for post in range(0, (posts|length) - 1, 2) %}
-            <!-- These are our grid blocks -->
-                <div class="l_g">
-                    <div class="col-md-3 integ">
-                        <div class="l_g_r">
-                            <div class="integer">
-                                <h2>Integer vitae libero ac risus egestas</h2>
-                                <p class="adm">
-                                    Posted by <a
-                                        href="{{ url_for('.user', username=posts[post].author.username) }}">
-                                    {{ posts[post].author.username }}
-                                </a>  |  {{ moment(posts[post].timestamp).fromNow() }}</p>
-                                <a href="{{ url_for('.user', username=posts[post].author.username) }}">
-                                    <img src="{{ posts[post].author.gravatar(size=100) }}"
-                                         class="img-responsive" alt="">
-                                </a><p>{{ posts[post].body }}</p><a href="details.html" class="link">Read More</a>
+    <div class="container-fluid">
+        <ul class="list-group">
+            {% for post in posts %}
+            <li class="list-group-item" style="border-left: none; border-right: none">
+                <div class="row">
+                    <div class="col-md-1">
+                         <a href="{{ url_for('.user', username=post.author.username) }}">
+                             <img src="{{ post.author.gravatar(size=100) }}" class="img-thumbnail" alt="">
+                         </a>
+                    </div>
+                    <div class="col-md-11">
+                        <div class="row">
+                            <div class="col-md-3" align="left">
+                                <span class="username">
+                                 <a href="{{ url_for('.user', username=post.author.username) }}">
+                                     {{post.author.username }}
+                                 </a>
+                                </span>
+                            </div>
+                            <div class="col-md-3 col-md-offset-6" align="right">
+                                 <span class="timestamp">{{ moment(post.timestamp).fromNow() }}</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="post-content">
+                                <p>{{ post.body }}</p>
+                            </div>
+                            <div class="post-footer" align="right">
+                                {% if current_user.is_administrator() and not current_user == post.author %}
+                                <a href="{{url_for('.edit', id=post.id) }}">
+                                    <span class="label label-danger">Edit [Admin]</span>
+                                </a>
+                                {% elif current_user == post.author %}
+                                <a href="{{ url_for('.edit', id=post.id) }}">
+                                    <span class="label label-primary">Edit</span>
+                                </a>
+                                {% endif %}
+                                 <a href="{{ url_for('.post', id=post.id) }}">
+                                    <span class="label label-default">Permalink</span>
+                                </a>
+
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 integ">
-                    <div class="l_g_r">
-                        <div class="integer">
-                            <h3>Integer vitae libero ac risus egestas</h3>
-                            <p class="adm">Posted by <a
-                                    href="{{ url_for('.user', username=posts[post + 1].author.username) }}">
-                                {{ posts[post+1].author.username }}
-                            </a>  |  {{ moment(posts[post+1].timestamp).fromNow() }}</p>
-                            <a href="{{ url_for('.user', username=posts[post+1].author.username) }}">
-                                <img src="{{ posts[post+1].author.gravatar(size=100) }}" class="img-responsive" alt=""></a>
-                            <p>{{ posts[post].body }}</p>
-                            <a href="details.html" class="link">Read More</a>
-                        </div>
-                    </div>
-                </div>
-         {% endfor %}
+            </li>
+            {% endfor %}
+        </ul>
     </div>
 </div>
-
-
-<!--<div class="list-group">-->
-    <!--{% for post in posts %}-->
-  <!--<a href="#" class="list-group-item">-->
-      <!--<table class="table-hover" cellpadding="10">-->
-          <!--<tr>-->
-              <!--<td>-->
-                  <!--<img class="img-thumbnail" src="{{ post.author.gravatar(avatar_hash) }}">-->
-              <!--</td>-->
-              <!--<td>-->
-                  <!--<a href="">-->
-                      <!--<h4 class="list-group-item-heading">{{ post.author.username }}</h4>-->
-                  <!--</a>-->
-                  <!--<p class="list-group-item-text">{{ post.body }}</p>-->
-              <!--</td>-->
-          <!--</tr>-->
-      <!--</table>-->
-  <!--</a>-->
-     <!--{% endfor %}-->
-<!--</div>-->
-<!--<ul class="posts">-->
-<!--{% for post in posts %}-->
-<!--<li class="post">-->
-<!--<div class="profile-thumbnail">-->
-<!--<a href="{{ url_for('.user', username=post.author.username) }}">-->
-<!--<img class="img-rounded profile-thumbnail"-->
-<!--src="{{ post.author.gravatar(size=40) }}">-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>-->
-<!--<div class="post-author">-->
-<!--<a href="{{ url_for('.user', username=post.author.username) }}">-->
-<!--{{ post.author.username }}-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="post-body">{{ post.body }}</div>-->
-    <!--</li>-->
-    <!--{% endfor %}-->
-    <!--</ul>-->
 
