--- a/flasky/app/templates/index.html
+++ b/flasky/app/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
+{% endblock %}
 {% block page_content %}
 {% import "_macros.html" as macros %}
+
 <div class="container">
 	<div class="page-header">
 
