--- a/flasky/app/templates/user.html
+++ b/flasky/app/templates/user.html
@@ -30,20 +30,19 @@
                 Member since {{ moment(user.member_since).format('L') }}.
                 Last seen {{ moment(user.last_seen).fromNow() }}.
             </p>
-            {% if current_user == user and not user.is_administrator() %}
+            {% if current_user == user and not current_user.is_administrator %}
             <a href="{{ url_for('main.edit_profile')}}" class="btn btn-primary" role="button">Edit Profile
-            <span class="glyphicon glyphicon-chevron-right"></span></a>
-            {%endif %}
-            {% if user.is_administrator() %}
+            <span class="glyphicon glyphicon-pencil"></span></a>
+            {% endif %}
+            {% if current_user.is_administrator %}
             <a href="{{ url_for('main.edit_profile_admin', id=user.id) }}" class="btn btn-danger" role="button">
                 [ADMIN] EditProfile
-            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="glyphicon glyphicon-pencil"></span>
             </a>
             {% endif %}
         </div>
     </div>
     <hr>
-
     <h3>Blog Posts</h3>
     {% include '_posts.html' %}
     {% endif %}
