--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,14 +8,21 @@
 
 <div class="container">
 	<div class="page-header">
-</div>
-	<div>
-		{% if current_user.can(Permission.WRITE_ARTICLES) %}
-		{{ wtf.quick_form(form) }}
-		{% endif %}
+		{% if current_user.is_authenticated %}<h2>Hello {{ current_user.username }}!</h2>
+        {% else %}<h2>Welcome to Flak!</h2>{% endif %}
 	</div>
-</div>
-<div class="container">
+    {% if current_user.can(Permission.WRITE_ARTICLES) %}
+    {{ wtf.quick_form(form) }}
+    {% endif %}
+<br>
+    <ul class="nav nav-tabs">
+        <li role="presentation" {% if not show_followed %}class="active" {% endif %}><a
+                href="{{ url_for('.show_all') }}">All</a></li>
+  		{% if current_user.is_authenticated %}
+        <li role="presentation" {% if show_followed %}class="active"{% endif %}><a
+                href="{{ url_for('.show_followed') }}">Followers</a></li>
+    {% endif %}
+    </ul>
 	{% include '_posts.html' %}
 </div>
 <div class="pagination">
